--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
             <div class="btn-container">
                 <button class="btn btn-color-2" 
-                onclick="window.open('./assets/Nagaditya_Gadey_Resume.pdf')">Download Resume</button>
+                onclick="window.open('./assets/Nagaditya_Gadey_Resume.docx')">Download Resume</button>
                 <button class="btn btn-color-1"
                 onclick="location.href='./#contact'">Contact details</button>
             </div>
@@ -115,13 +115,25 @@
                 <div class="details-container">
                     <h2 class="experience-sub-title">Full-Stack Software Developer</h2>
                     <div class="text-container">
-                        <h3 class="experience-sub-title2">Absolin Software Solutions LLP</h3>
+                        <h3 class="experience-sub-title2">Absolin Software Solutions</h3>
                         <ul class="experience-text">
                             <li>Involved in the process of Full Stack Software Java Web Development Scrum model incorporating business 
                                 requirements and using agile methodologies to figure out technical solutions for better implementation.</li>
                             <li>Developed professional single-page web applications and implemented dynamic graphic user interfaces using HTML, 
                                 CSS, & and React JavaScript based on product knowledge.</li>
                             <li>Developed RESTful API endpoints using Java Spring for different Projects to provide enhanced client interface.</li>
+                            <li>Worked on MongoDB database concepts such as locking, indexes, sharing, replication, and schema design.</li>
+                        </ul>      
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Full-Stack Software Developer</h2>
+                    <div class="text-container">
+                        <h3 class="experience-sub-title2">Quadwave Consulting Pvt Ltd</h3>
+                        <ul class="experience-text">
+                            <li>Involved in the analysis, design, development, and system and integration testing phases of the Software Development Lifecycle (SDLC).</li>
+                            <li>Involved in front-end (GUI) design and implementations using JSP, HTML5, React JS, JavaScript, and CSS3.</li>
+                            <li>Used Tomcat server for application development and deployment and JIRA for issue tracking.</li>
                             <li>Database Engineering by designing the database schema and writing SQL queries in the server-side controllers.</li>
                         </ul>      
                     </div>
@@ -129,7 +141,7 @@
                 <div class="details-container">
                     <h2 class="experience-sub-title">Software Engineer (Android Develpoper)</h2>
                     <div class="text-container">
-                        <h3 class="experience-sub-title2">Apalya Technologies</h3>
+                        <h3 class="experience-sub-title2">Apalya Technologies Pvt Ltd</h3>
                         <ul class="experience-text">
                             <li>Completed a hands-on internship focused on developing mobile applications using React Native and Android Studio.</li>
                             <li>Designed the header component of the whole application using Android Studio XML markup Language and made 
@@ -159,8 +171,21 @@
                         <li>Utilized React JavaScript, Firebase, HTML, and CSS to create a user-friendly and interactive platform in Webpack.</li>
                         <li>Enabled users to upload their products for sale and browse products for purchase.</li>
                     </ul>
-                    <footer>
+                    <footer id="myFooter">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NagadityaSriAbhiram/5130f2022/tree/main/NagadityaSriAbhiram-Gadey_FinalProject'">
+                            Github
+                        </button>
+                    </footer>
+                </div>
+                <div class="details-container color-container">
+                    <h2 class="experience-sub-title project-title">V-Stand</h2>
+                    <ul class="experience-text">
+                        <li>V-Stand is a mobile responsive web application implemented for blue-collared workers to provide decent exposure to work opportunities present around them.</li>
+                        <li>The web application contains two portals, one for the customer where they can mention their concerned issue, and the second portal is for the workers where they can view works available in a dashboard format and quote their price. </li>
+                        <li>Utilized HTML, CSS, PHP, MySQL, and Xampp to build the application.</li>
+                    </ul>
+                    <footer id="myFooter">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NagadityaSriAbhiram/vstand-capstone'">
                             Github
                         </button>
                     </footer>
@@ -173,8 +198,7 @@
                         <li>Utilized Python, React JavaScript, HTML, and CSS to build the application.</li>
                         <li>Created a summarization technique that can condense 1000 words length of text into short and concise summaries.</li>
                     </ul>
-                    <div class="btn"></div>
-                    <footer>
+                    <footer id="myFooter">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
                             Github
                         </button>
@@ -190,7 +214,7 @@
                             extraction, preprocessing, and predictive modeling.</li>
                         <li>Extracted relevant data from a dataset of 10,000 news articles and combined it with sector-specific and overall GDP values.</li>
                     </ul>
-                    <footer>
+                    <footer id="myFooter">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
                             Github
                         </button>
