New resume and minor changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
             <div class="btn-container">
                 <button class="btn btn-color-2" 
-                onclick="window.open('./assets/Nagaditya_Gadey_Resume.docx')">Download Resume</button>
+                onclick="window.open('./assets/NagadityaG_Resume.docx')">Download Resume</button>
                 <button class="btn btn-color-1"
                 onclick="location.href='./#contact'">Contact details</button>
             </div>
@@ -55,7 +55,7 @@
                     src="./assets/linkedin.png"
                     alt="My LinkedIn Profile"
                     class="icon"
-                    onclick="location.href='https://www.linkedin.com/in/gadey-abhiram/'"/>
+                    onclick="location.href='https://www.linkedin.com'"/>
                 <img
                     src="./assets/github.png"
                     alt="My GitHub Profile"
@@ -82,7 +82,7 @@
                             alt="Experience Icon"
                             class="icon"/>
                         <h3> Experience</h3>
-                        <p>2+ Years Full-Stack Development</p>
+                        <p>3+ Years of Full-Stack Development</p>
                     </div>
                     <div class="details-container">
                         <img
@@ -115,38 +115,36 @@
                 <div class="details-container">
                     <h2 class="experience-sub-title">Full-Stack Software Developer</h2>
                     <div class="text-container">
-                        <h3 class="experience-sub-title2">Absolin Software Solutions</h3>
+                        <h3 class="experience-sub-title2">Bell Info Solutions LLC</h3>
                         <ul class="experience-text">
-                            <li>Involved in the process of Full Stack Software Java Web Development Scrum model incorporating business 
-                                requirements and using agile methodologies to figure out technical solutions for better implementation.</li>
-                            <li>Developed professional single-page web applications and implemented dynamic graphic user interfaces using HTML, 
-                                CSS, & and React JavaScript based on product knowledge.</li>
-                            <li>Developed RESTful API endpoints using Java Spring for different Projects to provide enhanced client interface.</li>
-                            <li>Worked on MongoDB database concepts such as locking, indexes, sharing, replication, and schema design.</li>
+                            <li>Involved in the analysis, design, development, and system and integration testing phases of the Software Development Lifecycle (SDLC).</li>
+                            <li>Implemented web and enterprise applications using Java 11, Spring Boot, Spring Rest and Spring Security, React, NodeJS, Vue.js, Python, Django, MySQL, Angular, and MongoDB</li>
+                            <li>Implemented the application using Spring IOC, Spring MVC Framework, Spring AOP, Spring Boot, Spring Batch, and handled the security using Spring Security.</li>
+                            <li>Created sophisticated single-page product-based web applications, encompassing both frontend and backend development, while crafting dynamic graphical user interfaces utilizing HTML, CSS, React JS, Vue JS, JavaScript, and jQuery.</li>
                         </ul>      
                     </div>
                 </div>
                 <div class="details-container">
                     <h2 class="experience-sub-title">Full-Stack Software Developer</h2>
                     <div class="text-container">
-                        <h3 class="experience-sub-title2">Quadwave Consulting Pvt Ltd</h3>
+                        <h3 class="experience-sub-title2">Absolin Software Solutions LLP</h3>
                         <ul class="experience-text">
-                            <li>Involved in the analysis, design, development, and system and integration testing phases of the Software Development Lifecycle (SDLC).</li>
-                            <li>Involved in front-end (GUI) design and implementations using JSP, HTML5, React JS, JavaScript, and CSS3.</li>
-                            <li>Used Tomcat server for application development and deployment and JIRA for issue tracking.</li>
-                            <li>Database Engineering by designing the database schema and writing SQL queries in the server-side controllers.</li>
+                            <li>Involved in the process of Full Stack Software Web Development Scrum model incorporating business requirements and using agile methodologies to figure out technical solutions for better implementation.</li>
+                            <li>Developed professional single-page web applications including frontend and backend and implemented dynamic graphic user interfaces using HTML, CSS, Vue & React JavaScript based on product knowledge.</li>
+                            <li>o	Written SQL queries, and stored procedures modifications to existing database structure as required per the addition of new features.</li>
+                            <li>Experience in handling messaging services using Apache Kafka Implemented AWS solutions using EC2, S3, RDS, EBS, Elastic, Load Balancer, and Auto-scaling groups. </li>
                         </ul>      
                     </div>
                 </div>
                 <div class="details-container">
-                    <h2 class="experience-sub-title">Software Engineer (Android Develpoper)</h2>
+                    <h2 class="experience-sub-title">Full Stack Software Developer</h2>
                     <div class="text-container">
-                        <h3 class="experience-sub-title2">Apalya Technologies Pvt Ltd</h3>
+                        <h3 class="experience-sub-title2">Quadwave Consulting Pvt Ltd</h3>
                         <ul class="experience-text">
-                            <li>Completed a hands-on internship focused on developing mobile applications using React Native and Android Studio.</li>
-                            <li>Designed the header component of the whole application using Android Studio XML markup Language and made 
-                                changes to the Style and other icons on the header such as the hamburger menu icon, meatball menu icon, etc.</li>
-                            <li>Developed the horizontal menu toolbar in the screens to make changes in the style.</li>
+                            <li>Developed RESTful API endpoints using Java Spring for different Projects to provide enhanced client interface.</li>
+                            <li>Involved in front-end (GUI) design and implementations using JSP, HTML5, React JS, JavaScript, and CSS3.</li>
+                            <li>Contributed to the optimization of web performance by minifying CSS and JavaScript files and optimizing image assets.</li>
+                            <li>Database Engineering by designing the database schema and writing SQL queries in the server-side controllers.</li>
                         </ul>    
                     </div>
                 </div>
@@ -244,7 +242,7 @@
                     src="./assets/linkedin.png"
                     alt="LinkedIn Icon"
                     class="icon contact-icon" />
-                <p><a href="https://www.linkedin.com/in/gadey-abhiram/">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com">LinkedIn</a></p>
             </div>
         </div>
     </section>
